--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -18,7 +18,10 @@
           <a class="nav-link active" aria-current="page" href="#">Home</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Features</a>
+          <a class="nav-link" routerLink="/creaPost">CrearPost</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" routerLink="/posts">Mis Posts</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" routerLink="/users">Usuarios</a>
