--- a/src/app/pages/posts/posts.component.html
+++ b/src/app/pages/posts/posts.component.html
@@ -1,1 +1,13 @@
-<p>posts works!</p>
+<div class="container">
+    <div class="row row-cols-1 row-cols-md-2 g-4">
+        <div *ngFor="let item of posts" class="col">
+          <div class="card">
+            <div class="card-body">
+              <h5 class="card-title">{{item.title}}</h5>
+              <p class="card-text">{{item.content}}</p>
+            </div>
+          </div>
+        </div>
+       
+      </div>
+</div>
